# thedreamyteamproject

./: .gitattributes  CMakeLists.txt  FRAMEWORK-README.txt  LICENSE.txt  README.txt  run_cmake.sh
ascon/: CMakeLists.txt  ascon.c  crypto_aead.h
blockchain/: CMakeLists.txt  attack.cpp  attack.h  blockchain.cpp  blockchain.h  commitment.cpp  commitment.h  ecclib-glue.cpp  ecclib-glue.h  io.cpp  io.h  main.cpp  merkletree.cpp  merkletree.h  ring-signature.cpp  ring-signature.h  transaction.h  utils.cpp  utils.h
blockchain/tests/: CMakeLists.txt  attack.cpp  blockchain.cpp  commitment.cpp  merkletree.cpp  ring-signature.cpp  task3_custom.cpp
blockchain/tests/data/: genesis  miner.hash  spender.hash  testcase_1  testcase_10  testcase_11  testcase_12  testcase_13  testcase_14  testcase_15  testcase_16  testcase_17  testcase_2  testcase_3  testcase_4  testcase_5  testcase_6  testcase_7  testcase_8  testcase_9  transactions
cmake/: FindCheck.cmake
doc/: template.doxy.in
ecclib/: types.h
ecclib/bi/: bi.h  bi_gen.c  bi_gen.h
ecclib/eccp/: eccp.h  eccp_affine.c  eccp_affine.h  eccp_jacobian.c  eccp_jacobian.h
ecclib/gfp/: gfp.h  gfp_gen.c  gfp_gen.h  gfp_mont.c  gfp_mont.h
ecclib/protocols/: ecdh.c  ecdh.h  ecdsa.c  ecdsa.h  eckeygen.c  eckeygen.h  protocols.h
ecclib/utils/: param.c  param.h  rand.c  rand.h
tls/: CMakeLists.txt  aes128gcm.cpp  aes128gcm.h  ascon128.cpp  ascon128.h  basic-ae.cpp  basic-ae.h  basic-hash.h  client.cpp  counter.cpp  counter.h  ecclib-glue.cpp  ecdh.cpp  ecdh.h  endian.h  hkdf.cpp  hkdf.h  hmac-sha2.cpp  hmac-sha2.h  random.cpp  random.h  secrets.cpp  secrets.h  server.cpp  sha2.cpp  sha2.h  tls-aesgcm.cpp  tls-aesgcm.h  tls-ascon.cpp  tls-ascon.h  tls-cipher.cpp  tls-cipher.h  tls-handshake-client.cpp  tls-handshake-client.h  tls-handshake-server.cpp  tls-handshake-server.h  tls-record-layer.cpp  tls-record-layer.h  tls-server.cpp  tls-server.h  (+2 more)
tls/aes/: aes128.cpp  aes128.h  basic-block-cipher.h
tls/tests/: CMakeLists.txt  aesgcm.cpp  ascon.cpp  ecdh.cpp  helpers.h  hkdf.cpp  hmac_sha2.cpp  nonce.cpp  playback.cpp  playback.h  random.cpp  sha2.cpp  task1_custom.cpp  task2_custom.cpp  tls-encrypted-record.cpp  tls_handshake.cpp  tls_record_layer.cpp
tls/tests/data/: aes128gcm-testcase-1.sol  aes128gcm-testcase-2.chal  aes128gcm-testcase-2.sol  aes128gcm-testcase-3.chal  aes128gcm-testcase-3.sol  aes128gcm-testcase-4.chal  aes128gcm-testcase-4.sol  aes128gcm-testcase-5.sol  aes128gcm-testcase-6.sol  ascon-testcase-1.chal  ascon-testcase-1.sol  ascon-testcase-2.sol  ascon-testcase-3.sol  ascon-testcase-4.sol  ascon-testcase-5.chal  ascon-testcase-5.sol  ascon-testcase-6.chal  ascon-testcase-6.sol  client-change-client-cs.pb  client-change-server-cs.pb  client-handshake-ok-data.pb  client-handshake-ok.pb  server-change-client-cs.pb  server-change-server-cs.pb  server-handshake-ok-data.pb  server-handshake-ok.pb
utils/: CMakeLists.txt  io.h  tests.h  utils.cpp  utils.h
